css/core.ui.css
/* Header */

.navbar {
    border: none;
}
.navbar-default .navbar-brand {
    color: #fff;
}
.navbar-default .navbar-brand img {
    width: 32px;
}
.navbar-default .navbar-brand {
    color: #fff;
}
.navbar-default .navbar-brand:hover {
    background: #5bc0de;
    color: #fff;
}

nav.navbar-default{
    border: none;
}

.ui-nav-avatar {
    width: 20px;
}

#app-menu {
    color: #5bc0de;
}
.dropdown-menu {
    background : #404040;
    color: #fff;
}
.dropdown-menu>li>a {
    color: #fff;
}
.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border: none;
}
.navbar-default .navbar-collapse.in .showOnHover .targetToShow {
    display: block;
}
.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
    background: #5bc0de;
    color: #fff;
}
.navbar-default .navbar-nav .open .dropdown-menu>li>a {
    color: #fff;
}
.navbar-default .navbar-nav>li>a {
    color: #fff;
}
#app-menu ul li.active a {
    background: #5bc0de;
    color: #fff;
}
#app-menu ul li a:hover {
    background: #5bc0de;
    color: #fff;
}


.navbar-nav>li.active {
    color: #5bc0de;
    font-weight: bold;
}

/* Layout */
.app-logo {
    width: 64px;
}

#app-header {
    height: 70px;
}

#ux-content {
    background: #404040;
}
#ux-content {
    padding: 75px 0 0 0;
}

/* Show the red "No Drag" box in the demo */
#no-drag,
#do-drag {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 50%;
    height: 100px;
    margin-left: -25%;
    margin-top: -50px;
    background: red;
    color: #FFF;
    text-align: center;
    line-height: 100px;
}
#do-drag{
    background: green;
}

/* Styles for expanding "Search" input in the "Expanding" demo */
#ux-global-search-input {
    height: 35px;
    padding: 5px 15px 5px 5px;
    border: 1px solid #5bc0de;
}

#ux-global-search-input:focus {
    outline: none;
    border-color: #fff;
}

/* Styles for fading out the drawer content in the "Expanding" demo */
.drawer-inner {
    -webkit-transition: opacity 0.3s ease; 
       -moz-transition: opacity 0.3s ease; 
        -ms-transition: opacity 0.3s ease; 
         -o-transition: opacity 0.3s ease; 
            transition: opacity 0.3s ease; 
}

.snapjs-expand-left .drawer-inner,
.snapjs-expand-right .drawer-inner {
    opacity: 0;
}

/* Styles for the "Settings" demo */
.opt {
    padding: 20px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.opt p {
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 5px;
    color: #222;
    color: rgba(0, 0, 0, 0.6);
}

.snap-drawers {

}

.snap-drawer {
    padding: 75px 5px 10px 5px;
    color: #fff;
}

.app-bundle-icon {
    width: 64px;
}

.app-bundles {
    color: #fff;
}

.app-bundle-item {
    background: transparent;
    border: none;
}

a.list-group-item.app-bundle-item {

    color: #5bc0de;
    font-weight: bold;
}

a.list-group-item.app-bundle-item.active {

    color: #fff;
    font-weight: bold;
}

/* bs callout */
.bs-callout {
margin: 20px 0;
padding: 15px 30px 15px 15px;
border-left: 5px solid #eee;
}
.bs-callout h4 {
margin-top: 0;
}
.bs-callout p:last-child {
margin-bottom: 0;
}
.bs-callout code,
.bs-callout .highlight {
background: transparent;
}

.bs-callout-danger {
border-color: #d9534f;
}
.bs-callout-warning {
border-color: #f0ad4e;
}
.bs-callout-info {
border-color: #5bc0de;
}

/* Content Flow */
.ui-contentflow {
    margin: 15px 0 0 0;
}

/* Grid */
.ui-grid  {
    
}
.ui-grid-item {
    margin: 0 0 15px 0 ;
}

/* pnotify */
.ui-pnotify.ui-notification .ui-pnotify-container {
	background-color: #404040 !important;
	background-image: none !important;
	border: none !important;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
}
.ui-pnotify.ui-notification .ui-pnotify-title, .ui-pnotify.ui-notification .ui-pnotify-text {
	font-family: Arial, Helvetica, sans-serif !important;
	text-shadow: 2px 2px 3px black !important;
	font-size: 10pt !important;
	color: #FFF !important;
	padding-left: 50px !important;
	line-height: 1 !important;
	text-rendering: geometricPrecision !important;
}
.ui-pnotify.ui-notification .ui-pnotify-title {
	font-weight: bold;
}
.ui-pnotify.ui-notification .ui-pnotify-icon {
	float: left;
}
.ui-pnotify.ui-notification .picon {
	margin: 3px;
	width: 33px;
	height: 33px;
}
.ui-pnotify-history-container {

}
.ui-pnotify.stack-bottomleft {
	bottom: 25px;
	left: 25px;
	top: auto;
	right: auto;
}

